test: icon unit test